--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "chance": "^1.0.2",
+    "ejs": "^2.5.5",
     "express": "^4.13.4",
     "md5": "^2.1.0"
   },
