--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "chance": "^1.0.2",
     "ejs": "^2.5.5",
     "express": "^4.13.4",
-    "md5": "^2.1.0"
+    "md5": "^2.1.0",
+    "mongodb": "^2.2.22"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
