--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ejs": "^2.5.5",
     "express": "^4.13.4",
     "md5": "^2.1.0",
-    "mongodb": "^2.2.22"
+    "mongodb": "^2.2.22",
+    "sweetalert": "^1.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
