--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
-    "local": "./node_modules/.bin/nodemon --watch server -e js server/index.js"
+    "local": "./node_modules/.bin/nodemon --watch server -e js server/index.js",
+    "sass-watch": "sass --watch public/styles/css/input.scss:public/styles/output.css"
   },
   "author": "Lighthouse Labs",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "express": "^4.13.4",
     "md5": "^2.1.0",
     "mongodb": "^2.2.22",
+    "sass": "^0.5.0",
     "sweetalert": "^1.1.3"
   },
   "devDependencies": {
